# github-notifications-bot

./: .gitignore  README.md
src/: .database.env  Dockerfile  config.py  config_example.env  docker-compose.yml  main.py  pyproject.toml
src/database/: __init__.py  core.py
src/database/crud/: user.py
src/database/models/: user.py
src/services/: notifications.py
