[tool.poetry]
name = "github-notifications-bot"
version = "0.1.0"
description = ""
authors = ["Stepan Zubkov <stepanzubkov@florgon.com>"]
license = "AGPLv3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
httpx = "^0.27.0"
tortoise-orm = "^0.20.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
